feat: tsconfig 수정하여 컴파일된 파일 생성하도록 설정

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -3,28 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    ".": "./src/components/*",
-    "./avatar": "./src/components/avatar/index.ts",
-    "./badge": "./src/components/badge/index.ts",
-    "./breadcrumb": "./src/components/breadcrumb/index.ts",
-    "./button": "./src/components/button/index.ts",
-    "./dialog": "./src/components/dialog/index.ts",
-    "./error-notice": "./src/components/error-notice/index.ts",
-    "./icon-button": "./src/components/icon-button/index.ts",
-    "./input": "./src/components/input/index.ts",
-    "./progress": "./src/components/progress/index.ts",
-    "./reaction-toggle": "./src/components/reaction-toggle/index.ts",
-    "./select": "./src/components/select/index.ts",
-    "./star": "./src/components/star/index.ts",
-    "./tab": "./src/components/tab/index.ts",
-    "./tag": "./src/components/tag/index.ts",
-    "./modal-button": "./src/components/modal-button/index.ts",
-    "./modal-header": "./src/components/modal-header/index.ts",
-    "./textarea": "./src/components/textarea/index.ts",
-    "./info-chip": "./src/components/info-chip/index.ts",
-    "./pagenation": "./src/components/pagenation/index.ts",
-    "./image-upload": "./src/components/image-upload/index.ts",
-    "./image-preview": "./src/components/image-preview/index.ts",
+    ".": "./dist/src/components/index.js",
+    "./avatar": "./dist/src/components/avatar/index.js",
+    "./badge": "./dist/src/components/badge/index.js",
+    "./breadcrumb": "./dist/src/components/breadcrumb/index.js",
+    "./button": "./dist/src/components/button/index.js",
+    "./dialog": "./dist/src/components/dialog/index.js",
+    "./error-notice": "./dist/src/components/error-notice/index.js",
+    "./icon-button": "./dist/src/components/icon-button/index.js",
+    "./input": "./dist/src/components/input/index.js",
+    "./progress": "./dist/src/components/progress/index.js",
+    "./reaction-toggle": "./dist/src/components/reaction-toggle/index.js",
+    "./select": "./dist/src/components/select/index.js",
+    "./star": "./dist/src/components/star/index.js",
+    "./tab": "./dist/src/components/tab/index.js",
+    "./tag": "./dist/src/components/tag/index.js",
+    "./modal-button": "./dist/src/components/modal-button/index.js",
+    "./modal-header": "./dist/src/components/modal-header/index.js",
+    "./textarea": "./dist/src/components/textarea/index.js",
+    "./info-chip": "./dist/src/components/info-chip/index.js",
+    "./pagenation": "./dist/src/components/pagenation/index.js",
+    "./image-upload": "./dist/src/components/image-upload/index.js",
+    "./image-preview": "./dist/src/components/image-preview/index.js",
     "./styles.css": "./dist/index.css"
   },
   "scripts": {
